--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,21 +4,83 @@ body {
 }
 
 body {
-	/* background: url('../img/background.jpg') no-repeat;
-	background-size: cover; */
+	width: 100%;
+}
+
+.flex-container {
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	flex-direction: row;
+	width: 100%;
+	height: 100vh;
+}
+
+@media (max-width: 768px) {
+	.flex-container {
+		flex-direction: column;
+		height: auto;
+	}
+}
+
+.nav {
+	width: 25%;
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100vh;
+	z-index: 10;
+}
+
+@media (max-width: 768px) {
+	.nav {
+		width: 100%;
+		position: static;
+	}
 }
 
 /* App container*/
 .app-container {
-	max-width: 450px;
-	width: 100%;
+	position: absolute;
+	width: 75%;
+	height: auto;
+	top: 0;
+	right: 0;
+	min-height: 100vh;
 	padding: 25px;
-
+	padding-left: 7%;
+	padding-right: 7%;
 	background: rgba(255, 255, 255, 0.7);
 	box-shadow: 0 0 62px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 768px) {
+	.app-container {
+		position: static;
+		width: 100%;
+	}
+}
+
+.list-group {
+	height: 100vh;
+	display: flex;
+	width: 100%;
+	justify-content: space-around;
+	flex-direction: column;
+}
+
+.nav-item {
+	height: 14.3%;
+	overflow: hidden;
+	display: flex;
+	flex-direction: row-reverse;
+	align-items: center;
+	justify-content: space-between;
+	cursor: pointer;
+	padding: 0 2em;
+	transition: 0.2s all ease-in-out;
+}
+
+.active {
+	background: #ccc;
 }
 
 .app-container h3 {
@@ -39,4 +101,13 @@ body {
 
 .single-task {
 	margin-bottom: 12px;
+}
+
+.btn-clear-all {
+	display: none;
+}
+
+.btn-success {
+	color: white;
+	transition: 0.3s all ease-in-out;
 }
