naprawiono pokazywanie dat i czyszczenie zadań
czyszczenie zadań z poprzedniego tygodnia, przy każdym rozpoczętym nowym tygodniu

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -107,6 +107,12 @@ body {
 	display: none;
 }
 
+.btn-clear-all-days {
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
 .btn-success {
 	color: white;
 	transition: 0.3s all ease-in-out;
