--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,19 +27,15 @@ body {
 .input-group > .form-control:not(:last-child) {
   background: transparent;
 }
+.badge-info {
+  padding: 0.6rem;
+}
 
 .flex-container {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100vh;
-}
-
-@media (max-width: 768px) {
-  .flex-container {
-    flex-direction: column;
-    height: auto;
-  }
 }
 
 .nav {
@@ -51,15 +47,10 @@ body {
   z-index: 10;
 }
 
-@media (max-width: 768px) {
-  .nav {
-    width: 100%;
-    position: static;
-  }
-}
 .container-panels {
   display: flex;
 }
+
 .main-setup-panel {
   position: fixed;
   height: 100vh;
@@ -69,10 +60,15 @@ body {
   width: 20%;
   padding: 75px 20px;
 }
+
 .panel-added-tasks {
   width: 60%;
   padding: 50px 20px;
 }
+.panel-added-tasks input {
+  border: none;
+}
+
 .menu-panel-change {
   position: fixed;
   bottom: 0;
@@ -85,7 +81,9 @@ body {
   align-items: center;
   background: darkslategray;
   margin: 0;
+  padding: 0;
 }
+
 .menu-panel-item {
   font-size: 1.5rem;
   margin: 0 1rem;
@@ -99,8 +97,9 @@ body {
   align-items: center;
   cursor: pointer;
 }
+
 .menu-panel-item-active {
-  color: #0998ec;
+  color: #17a2b8;
 }
 /* App container*/
 .app-container {
@@ -116,12 +115,6 @@ body {
   box-shadow: 0 0 62px rgba(0, 0, 0, 0.1);
 }
 
-@media (max-width: 768px) {
-  .app-container {
-    position: static;
-    width: 100%;
-  }
-}
 .app-container-bg {
   width: 75%;
   height: 100%;
@@ -192,14 +185,83 @@ body {
 }
 .btn-custom-color {
   color: white;
-  background: #0998ec;
+  background: #17a2b8;
 }
 .btn-custom-color:hover {
   color: white;
-  background: #0998ec;
+  background: #17a2b8;
 }
 /* #ec0972 */
 .date {
   /* font-family: "Mali", cursive;*/
   font-weight: 700;
+}
+.check-btn,
+.delete-btn {
+  background: none;
+  border: none;
+  color: gray;
+  outline: none;
+}
+.btn-success-custom .fa-check {
+  color: green !important;
+}
+.check-btn:hover {
+  color: green;
+  background: none;
+}
+.delete-btn:hover {
+  color: red;
+  background: none;
+}
+/* @media (max-width: 1280px) {
+  .container-panels {
+    flex-direction: column;
+  }
+  .app-container {
+    position: static;
+    width: 100%;
+  }
+} */
+@media (max-width: 1080px) and (min-width: 820px) {
+  .menu-panel-change {
+    flex-direction: column;
+    height: auto;
+  }
+  .menu-panel-item {
+    margin: 0.3rem 0;
+  }
+}
+@media (max-width: 820px) {
+  .panel-added-tasks {
+    width: 100%;
+  }
+  .flex-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .menu-panel-change {
+    width: 100%;
+    position: relative;
+    background: transparent;
+  }
+
+  .nav {
+    width: 100%;
+    position: static;
+  }
+
+  .main-setup-panel {
+    position: relative;
+    width: 100%;
+    order: -1;
+    height: auto;
+  }
+  .toast-custom-style {
+    z-index: 10;
+    top: 0;
+    right: 0;
+    height: auto;
+  }
 }
