--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,14 +116,16 @@ body {
 }
 
 .app-container-bg {
-  width: 75%;
+  width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   background: url("../assets/dairy-1986532_1920.jpg");
   background-size: cover;
   opacity: 0.3;
+  z-index: -1;
+  background-position: center;
 }
 .list-group {
   height: 100vh;
@@ -214,25 +216,45 @@ body {
   color: red;
   background: none;
 }
-/* @media (max-width: 1280px) {
-  .container-panels {
-    flex-direction: column;
+
+@media (max-width: 1280px) {
+  .main-setup-panel {
+    width: 100%;
+    background: white;
+    z-index: 100;
+    display: none;
   }
+  .container-panels {
+    flex-direction: column-reverse;
+  }
+  .panel-added-tasks {
+    width: 100%;
+    height: auto;
+  }
+
+  .menu-panel-change {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    flex-direction: row;
+    height: auto;
+    background: transparent;
+    width: 100%;
+    justify-content: flex-end;
+    z-index: 10;
+  }
+  .menu-panel-item {
+    margin: 0.3rem;
+    background: darkslategray;
+    color: white;
+  }
+}
+
+@media (max-width: 820px) {
   .app-container {
     position: static;
     width: 100%;
   }
-} */
-@media (max-width: 1080px) and (min-width: 820px) {
-  .menu-panel-change {
-    flex-direction: column;
-    height: auto;
-  }
-  .menu-panel-item {
-    margin: 0.3rem 0;
-  }
-}
-@media (max-width: 820px) {
   .panel-added-tasks {
     width: 100%;
   }
@@ -241,27 +263,24 @@ body {
     height: auto;
   }
 
-  .menu-panel-change {
-    width: 100%;
-    position: relative;
-    background: transparent;
-  }
-
   .nav {
     width: 100%;
     position: static;
   }
 
-  .main-setup-panel {
+  /* .main-setup-panel {
     position: relative;
     width: 100%;
     order: -1;
     height: auto;
-  }
+  } */
   .toast-custom-style {
     z-index: 10;
     top: 0;
     right: 0;
     height: auto;
+  }
+  .nav {
+    height: 50vh;
   }
 }
