--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,9 +66,10 @@ body {
   height: 100vh;
   top: 0;
   right: 0;
-  background: #ffffff85;
+  background: #dee2e6;
   width: 20%;
   padding: 75px 20px;
+  color: #6c757d;
 }
 .main-setup-panel-content {
   display: none;
@@ -127,7 +128,6 @@ body {
   padding: 25px;
   padding-left: 7%;
   padding-right: 7%;
-  box-shadow: 0 0 62px rgba(0, 0, 0, 0.1);
 }
 
 .app-container-bg {
@@ -136,11 +136,11 @@ body {
   position: fixed;
   top: 0;
   right: 0;
-  background: url("../assets/dairy-1986532_1920.jpg");
+  background: url("../assets/desktop-3820634_1920.jpg");
   background-size: cover;
-  opacity: 0.3;
+  opacity: 0.2;
   z-index: -1;
-  background-position: center;
+  background-position: right;
 }
 .list-group {
   height: 100vh;
@@ -242,9 +242,14 @@ body {
   padding: 15px;
 }
 .search-results-item a {
-  color: black;
+  color: #6c757d;
 }
-
+.nav-button {
+  display: none;
+}
+.close-button {
+  display: none;
+}
 @media (max-width: 1280px) {
   .main-setup-panel {
     width: 100%;
@@ -258,18 +263,20 @@ body {
   .panel-added-tasks {
     width: 100%;
     height: auto;
+    padding: 80px 20px;
   }
 
   .menu-panel-change {
     position: fixed;
-    bottom: 0;
+    top: 0;
     right: 0;
     flex-direction: row;
-    height: auto;
+    height: 4rem;
     background: transparent;
-    width: 100%;
+    width: auto;
     justify-content: flex-end;
-    z-index: 10;
+    align-items: flex-start;
+    z-index: 100;
   }
   .menu-panel-item {
     margin: 0.3rem;
@@ -279,9 +286,37 @@ body {
   .nav .badge-info {
     width: 30%;
   }
-}
-
-@media (max-width: 820px) {
+  .nav-button {
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background: #17a2b8;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    position: fixed;
+    top: 0.5rem;
+    left: 0.5rem;
+    z-index: 100;
+    font-size: 1.5rem;
+  }
+  .nav {
+    width: 100%;
+    position: static;
+    display: none;
+  }
+  .navbar-top {
+    width: 100%;
+    height: 4rem;
+    background: #b3d7ff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 97;
+  }
   .app-container {
     position: static;
     width: 100%;
@@ -289,14 +324,51 @@ body {
   .panel-added-tasks {
     width: 100%;
   }
+  .active-mobile-nav,
+  .active-mobile-panel {
+    width: 100%;
+    height: calc(100vh - 4rem);
+    z-index: 98;
+    position: fixed;
+    top: 4rem;
+    left: 0;
+    display: block;
+  }
+
+  .list-group {
+    height: 100%;
+  }
+  .close-button {
+    display: none;
+    background: none;
+    border: none;
+    position: fixed;
+    top: 0.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 0.85rem;
+    cursor: pointer;
+    z-index: 104;
+    margin-top: 1rem;
+    font-weight: bold;
+    width: auto;
+  }
+  .search-results-item a {
+    color: black;
+  }
+  .toast-custom-style {
+    z-index: 110;
+    bottom: 0;
+    right: 0;
+    height: auto;
+    width: 100%;
+  }
+}
+
+@media (max-width: 820px) {
   .flex-container {
     flex-direction: column;
     height: auto;
-  }
-
-  .nav {
-    width: 100%;
-    position: static;
   }
 
   /* .main-setup-panel {
@@ -305,15 +377,7 @@ body {
     order: -1;
     height: auto;
   } */
-  .toast-custom-style {
-    z-index: 10;
-    top: 0;
-    right: 0;
-    height: auto;
-  }
-  .nav {
-    height: 50vh;
-  }
+
   .nav .badge-info {
     height: 100%;
   }
